# video-source-py

./: .dockerignore  .gitignore  DEV_READEME.md  DEV_README.md  Dockerfile  Makefile  README.md  demo.py  docker_build.sh  docker_push.sh  main.py  points_SB.txt  pyproject.toml  run_stage.py  settings.template.yaml  start_make.sh
.github/: dependabot.yml
.github/workflows/: build-publish-latest.yml  build-release-latest.yaml  create-release.yaml  pr_build.yaml
debian/: changelog  control  copyright  install  postinst  preinst  prerm  rules  videosource.service
tests/: test_video_source.py
video_source_py/: __init__.py  config.py  errors.py  framecapturethread.py  framecounterthread.py  framegrabber.py  stage.py  videosource.py
