[tool.poetry]
name = "video-source-py"
version = "1.0.1"
description = "A generic video source extracting frames from any source OpenCV / ffmpeg supports and pushing it towards a consumer"
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
opencv-python = "^4.7.0.72"
visionapi_yq = {git = "https://github.com/siri-rouser/visionapi_YQ.git", rev= '4681e765cb05ad289a5727f7b33c6001ec153835', subdirectory="visionapi_YQ", tag = "0.0.1" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.0" }
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
pyturbojpeg = "^1.7.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
