[tool.poetry]
name = "video-source-py"
version = "1.2.2"
description = "A generic video source extracting frames from any source OpenCV / ffmpeg supports and pushing it towards a consumer"
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPL3"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
opencv-python = "^4.7.0.72"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.2.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
redis = "^5.0.0"
pydantic-settings = "^2.10.1"
prometheus-client = "^0.22.1"
pyturbojpeg = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
